frontend-robo/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-robo
  labels:
    app: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend-robo
        image: primepossum/frontend-robo
        ports:
        - containerPort: 80
